add css to the background and results page

--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ body {
   font-family: 'Hedvig Letters Serif', serif;
 
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #0F0B16;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
