--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,5 +1,5 @@
 nav {
-  background-color: grey;
+  background-color: #2B506C;
   padding: 10px;
   display: flex;
   justify-content: space-between;
