--- a/src/pages/ResultsPage/ResultsPage.css
+++ b/src/pages/ResultsPage/ResultsPage.css
@@ -4,6 +4,9 @@
   justify-content: center; 
   align-items: center;   
   text-align: left;
+  border: 1px solid grey;
+  padding: 10px;
+  border-radius: 10px;
 }
 
 .pie-chart{
@@ -21,15 +24,18 @@
   padding: 10px;
   border-radius: 10px;
   border-style: none;
-  color: rgb(71, 10, 225);
-  background-color: rgb(204, 204, 204);
+  color: #2B506C;
+  background-color: #cccccc;
 }
 
 .back-btn{
+  color: #2B506C;
+  background-color: #cccccc;
   padding:10px;
   margin-left: 20px;
   border-radius: 10px;
-  
+  border-style: none;
+
 }
 
 .title{
