fix  the position of the back button

--- a/src/pages/ResultsPage/ResultsPage.css
+++ b/src/pages/ResultsPage/ResultsPage.css
@@ -31,7 +31,8 @@
 .back-btn{
   color: #2B506C;
   background-color: #cccccc;
-  padding:10px;
+  padding:15px;
+  margin-top: 14px;
   margin-left: 20px;
   border-radius: 10px;
   border-style: none;
