--- a/src/pages/Profiles/Profiles.module.css
+++ b/src/pages/Profiles/Profiles.module.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -6,4 +6,4 @@
 
 .container > p {
   margin: 8px;
-}
+} */
