--- a/src/pages/Signup/Signup.module.css
+++ b/src/pages/Signup/Signup.module.css
@@ -18,7 +18,7 @@ input[type="file"] {
 .message {
   margin-top: 0;
   height: 20px;
-  color: #dd1b16;
+  color: #b83131;
   font-size: 18px;
   font-weight: bold;
 }
@@ -47,8 +47,13 @@ input[type="file"] {
 }
 
 .signup {
-  border: 2px solid red;
+  /* border: 1px solid rgb(255, 255, 255); */
   border-radius: 40px;
   padding: 30px;
   padding-right: 50px;
+}
+
+.p{
+  margin-top: -10px;
+  text-align: center;
 }
