--- a/src/pages/Signup/Signup.module.css
+++ b/src/pages/Signup/Signup.module.css
@@ -2,7 +2,7 @@ input {
   margin-left: 16px;
   padding: 4px 8px;
   font-size: 16px;
-  width: 300px;
+  width: 2ode 00px;
 }
 
 input[type="file"] {
@@ -38,9 +38,22 @@ input[type="file"] {
   margin: 1px 0px 2px 70px
 }
 
+.button:disabled{
+  color: #dd1b16;
+  background-color: #0F0B16;
+  border-style: none;
+  border: solid 1px red;
+}
+
 .button {
   margin-left: 16px;
+  padding: 5px;
+  background-color: rgb(79, 79, 222);
+  border-radius: 10px;
+  color: black;
+  border-style: none;
 }
+
 
 .form > input:last-of-type {
   margin-bottom: 30px;
