--- a/src/pages/ResultsPage/ResultsPage.css
+++ b/src/pages/ResultsPage/ResultsPage.css
@@ -1,6 +1,7 @@
 .results{
   margin: 0 60px;
   /* display: flex; */
+  background-color: #0F0B16; 
   justify-content: center; 
   align-items: center;   
   text-align: left;
