--- a/src/components/CountInput/Count.css
+++ b/src/components/CountInput/Count.css
@@ -6,6 +6,7 @@
   width: 250px;
   text-align: center;
   margin-right: auto;
+	animation: puff-in-center 0.2s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
 }
 
 .counter{
@@ -22,4 +23,17 @@
   border-style: none;
   padding: 7px;
   border-radius: 10px;
+}
+
+@keyframes puff-in-center {
+  0% {
+    transform: scale(0);
+    filter: blur(4px);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    filter: blur(0px);
+    opacity: 1;
+  }
 }
