--- a/src/components/Buttons/Buttons.css
+++ b/src/components/Buttons/Buttons.css
@@ -14,16 +14,14 @@
   width: 80px;
   border-radius: 10px;
   background-color: #00A3B9;
-  font-weight: 900
+  font-weight: 900;
 }
 
-.select-buttons:active{
-  background-color: #12e3ff;
-}
 
 .active-btn{
   border:1px solid #12e3ff;
   background-image: linear-gradient(to top, #00a3b9, #3a7396, #434762, #2d232e, #000000);
+  animation: color-shift .5s ease-out;
 }
 
 .bottom-btns{
@@ -31,4 +29,15 @@
   grid-template-columns: repeat(2, 20vmin);
   grid-gap: 20px;
   margin-left: 45px;
+}
+
+@keyframes color-shift {
+  0% {
+    background: #00A3B9;
+  }
+  100% {
+
+    background: linear-gradient(to top, #00a3b9, #3a7396, #434762, #2d232e, #000000);
+
+  }
 }
