capitalize username and add animation to the reset popup

--- a/src/pages/Landing/Landing.css
+++ b/src/pages/Landing/Landing.css
@@ -34,6 +34,7 @@
   display: flex;
   text-align: center;
   padding: 38px;
+  animation: puff-in-center 0.2s cubic-bezier(0.470, 0.000, 0.745, 0.715) both;
 }
 
 .close-btn ,
