--- a/src/pages/Landing/Landing.css
+++ b/src/pages/Landing/Landing.css
@@ -86,6 +86,18 @@
 
 .loading{
   text-align: center;
-  margin: 4rem;
-  
 }
+
+.layer1{
+  border: 2px solid red;
+  width: 300px;
+}
+
+.layer2{
+  margin: 40px auto;
+  padding: 4px;
+  border: 2px solid blue;
+  width: 312px;
+  height: 100px;
+}
+
